YAML/client-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-client-app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-client-app
  template:
    metadata:
      labels:
        app: todo-client-app
    spec:
      containers:
      - name: container1
        image: gcr.io/devops-384013/todo-client-app:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "500m"
            memory: "200Mi"
          limits:
            cpu: "800m"
            memory: "400Mi"
      nodeSelector:
        kubernetes.io/arch: "amd64"
