YAML/client-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client-service
spec:
  selector:
    app: todo-client-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
