YAML/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - devops-tutorial.site
    secretName: devops-tutorial-tls 
  rules:
  - host: devops-tutorial.site
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 3000 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-client-service
            port:
              number: 80
